welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var taille = getMondeHauteur()
  var tab = new Array[Color](taille)
  tab(0) = getCouleurSOl()
  for (i <- 1 to tab.length-1) {
    avance()
    tab(i) = getCouleurSol()
  }
  var largeur = getMondeLargeur()
  for (i <- 0 to largeur - 2) {
    recule(taille-1)
    gauche()
    avance()
    droite()
    for (k <- 0 to taille - 1) {
      	 var indice = k
         marquageSol(tab(indice))
      	 avance()
         }
  }
  
  def marquageSol(couleur:Color) {
    setCouleurBrosse(couleur)
    baisseBrosse()
    leveBrosse()
  }
}